# ctga

./: .gitignore  CHECKLIST.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: implementation_task.md  research_task.md
configs/: README.md  base.yaml  dataset_scannet.yaml  dataset_scannet200.yaml  dataset_scenenn.yaml  infer_online.yaml  train_layer1.yaml  train_layer2.yaml
docs/: README.md  quick_12h_graph_test_plan.md
docs/实现规划/: 仓库结构与模块边界.md  阶段路线图.md
docs/实验设计/: 阶段实验与指标.md
docs/归档/: 原始材料索引.md  工程实践.md  方法.md
docs/方法/: 方法总览.md
docs/理论分析/: 核心假设与风险.md  设计决策与取舍.md
docs/项目管理/: GitHub首发材料.md  实现执行清单.md  开发清单.md  文档维护约定.md  首个Milestone与Issue拆分.md
docs/项目管理/issues/: 001-对齐第三方依赖与baseline入口.md  002-补全数据契约与序列读取链路.md  003-完成layer1最小闭环验证.md  004-完成layer2最小闭环验证.md  005-补齐teacher-supervision与训练入口.md  006-建立远程运行与评测基线.md
quick_graph_test/: README.md  __init__.py
quick_graph_test/src/: __init__.py  analyze_gt_layer1.py  assoc_l2.py  cluster_l1.py  common_types.py  geometry.py  io_seq.py  mask_source.py  primitive_build.py  render_samples.py  run_quick_test.py  sample_mining.py  score_l1.py  summarize_task8.py  track_bank.py  viz.py
src/ctga/: __init__.py
src/ctga/common/: __init__.py  config.py  geometry.py  io.py  logger.py  registry.py  types.py
src/ctga/datasets/: __init__.py  custom_sequence.py  (+4 more)
tests/: __init__.py  test_geometry.py  test_graph_pipeline.py
tools/: README.md  dump_debug_packet.py  preprocess_masks.py  preprocess_primitives.py  replay_sequence.py  visualize_graph1.py  visualize_graph2.py
(+54 files in other folders)
